Bug #9813 Test 'ndb_basic': Autoincrement fails in 64 bit ?
Submitted: 11 Apr 2005 12:15 Modified: 9 May 2005 11:50
Reporter: Joerg Bruehe Email Updates:
Status: Closed
Category:Server Severity:S1 (Critical)
Version:5.0.4-beta OS:various Unix, only 64 bit
Assigned to: Martin Skold Target Version:

[11 Apr 2005 12:15] Joerg Bruehe
Description:
Build of 5.0.4-beta, based on ChangeSet
  1.1889 05/04/08 16:49:14 mskold@mysql.com +4 -0
  Merge from fix of Bug #9675  Auto-increment not working with INSERT..SELECT and NDB
storage

Test 'ndb_basic' fails on aix52-64bit, butch-64bit, hp3750-64bit, octane2-64bit,
sunfire100a-64bit, sunfire100b-64bit

Symptom:
=== quote start ===
ndb_basic                      [ fail ]

Errors are (from
/export/home/mysqldev/butch-64bit/test/mysql-max-5.0.4-beta-sun-solaris2.10-sparc-64bit/mysql-test/var/log/mysqltest-time)
:
/export/home/mysqldev/butch-64bit/test/mysql-max-5.0.4-beta-sun-solaris2.10-sparc-64bit/bin/mysqltest:
At line 602: query 'insert into t1 (datavalue) select datavalue from t1 where counter <
100' failed: 1062: Duplicate entry '0' for key 1
(the last lines may be the most important ones)

Ending Tests
=== quote end ===

In the "PS protocol" run, the line is
/export/home/mysqldev/butch-64bit/test/mysql-max-5.0.4-beta-sun-solaris2.10-sparc-64bit/bin/mysqltest:
At line 602: unable to execute statement 'insert into t1 (datavalue) select datavalue from
t1 where counter < 100': Duplicate entry '0' for key 1 (mysql_stmt_errno=1062 returned=1)

A tree for analysis / fix is isolated on "butch": ~mysqldev/bug# (name will be finished
when # is known).

How to repeat:
Build + test.
[13 Apr 2005 10:43] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/23952
[7 May 2005 20:08] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/24685