Fix for bug#9813: Test 'ndb_basic': Autoincrement fails in 64 bit